grammer.txt
expr    : KEYWORD:let IDENTIFIER EQ expr
        : term ((PLUS|MINUS) term)*

term    : factor ((MUL|DIV) factor)*

factor  : (PLUS|MINUS) factor
        : power

power   : atom (POW factor)*

atom    : INT|FLOAT|IDENTIFIER
        : LPAREN expr RPAREN
